+ Bug [#4367]: Non-Aerospace units firing at ASFs does not appear to follow latest errata rules

--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -384,7 +384,7 @@ GameOptionsInfo.option.atmospheric_control.description=atmospheric control rolls
 GameOptionsInfo.option.ammo_explosions.displayableName=Ammo explosions
 GameOptionsInfo.option.ammo_explosions.description=Roll 2D6 on critical hits to ammo-fed weapons.\nOn a roll of 10 or higher,\nthe ammunition explodes.
 GameOptionsInfo.option.stratops_aa_fire.displayableName=StratOps Advanced Anti-Aircraft
-GameOptionsInfo.option.stratops_aa_fire.description=If checked, range and position for ground to air fire are determined by the closest point in the flight path and velocity is added to the to-hit roll.
+GameOptionsInfo.option.stratops_aa_fire.description=If checked, velocity is added to the to-hit roll; SO pg 94 (previously affected range/position but this is now a core TW rule, pg 107)
 GameOptionsInfo.option.stratops_aaa_laser.displayableName=StratOps AAA Capital Laser Targeting
 GameOptionsInfo.option.stratops_aaa_laser.description=If checked,\ncapital laser bays can change mode to target small craft.
 GameOptionsInfo.option.stratops_bracket_fire.displayableName=StratOps Bracketing Fire
