--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -23,6 +23,8 @@ v0.41.2-dev (SVN)
 + Translation(Russian): Translation of common/options/message_ru.properties
 + Bug [#4392]: Landing Checks include additional modifiers that they shouldn't
 + Bug: Updated landing checks to match current errata
++ Bug [#4367]: Non-Aerospace units firing at ASFs does not appear to follow
+    latest errata rules
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
