--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -27,6 +27,7 @@ v0.41.2-dev (SVN)
     latest errata rules
 + Data: New Sprites/Add some units from TRO VAr
 + Bug [#4429]: MM Option Unofficial Primary Target is bugged
++ Bug [#4411]: Vehicles can abandon crew into illegal hexes
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
