+ Feature: Added report to failed landing checks, gives dmg and dmg calculation

--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -1004,6 +1004,7 @@
 9606=Needs <data> [<data>], rolls <data> : <msg:9607,9608>
 9607=landing successful.
 9608=<font color='C00000'>landing failed, damage taken.</font>
+9609=<data> (<data>) takes <data> damage (MoF <data> * 10)
 #crash related
 9700=<newline><font color='C00000'><data> (<data>) crashes, suffering <data> damage!</font>
 9701=<newline><font color='C00000'><data> (<data>) crashes off the map!</font>
