--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -31,6 +31,8 @@ v0.41.2-dev (SVN)
 + Feature: Added report to failed landing checks, gives dmg and dmg calculation
 + Bug: Landing terrain modifiers were applied incorrectly: each terrain type
     present should add a penalty (previously just took worst penalty)
++ Feature: Support for support vehicles (costs and tonnages should be computed
+    correctly now)
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
