+ Translation(Russian): equipment is now Russian; new contributor added

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -33,6 +33,7 @@ v0.41.2-dev (SVN)
     present should add a penalty (previously just took worst penalty)
 + Feature: Support for support vehicles (costs and tonnages should be computed
     correctly now)
++ Translation(Russian): equipment is now Russian; new contributor added
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
