+ Bug: Removed Walk button for airborne Aeros

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -34,6 +34,7 @@ v0.41.2-dev (SVN)
 + Feature: Support for support vehicles (costs and tonnages should be computed
     correctly now)
 + Translation(Russian): equipment is now Russian; new contributor added
++ Bug: Removed Walk button for airborne Aeros
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
