--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -35,6 +35,7 @@ v0.41.2-dev (SVN)
     correctly now)
 + Translation(Russian): equipment is now Russian; new contributor added
 + Bug: Removed Walk button for airborne Aeros
++ Bug: Observers were allowed to reinforce from RATs
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
