--- a/trunk/megamek/i18n/megamek/client/messages.properties
+++ b/trunk/megamek/i18n/megamek/client/messages.properties
@@ -347,7 +347,7 @@ ClientGUI.FileSaveServerDialog.message=Please enter the filename under which the
 ClientGUI.MechDisplay=Mech Display
 ClientGUI.MiniMap=MiniMap
 ClientGUI.openUnitListFileDialog.noReinforceTitle=Must have a team assigned!
-ClientGUI.openUnitListFileDialog.noReinforceMessage=Players must have an assigned team in order to reinforce units!
+ClientGUI.openUnitListFileDialog.noReinforceMessage=Players must have an assigned team in order to reinforce units!\nObservers may join a team using the /joinTeam command.\nFor more information, use /help joinTeam.
 ClientGUI.openUnitListFileDialog.title=Open Unit List File
 ClientGUI.saveUnitListFileDialog.title=Save Unit List As
 ClientGUI.SaveUnitsDialog.message=Do you want to save all surviving units\n(including retreated units) to a file?
