+ Feature: UnitSelectorDialog not has a "Support Vehicle" type for filtering   Also fixed a syntax error in MiscType

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -36,6 +36,7 @@ v0.41.2-dev (SVN)
 + Translation(Russian): equipment is now Russian; new contributor added
 + Bug: Removed Walk button for airborne Aeros
 + Bug: Observers were allowed to reinforce from RATs
++ Feature: UnitSelectorDialog not has a "Support Vehicle" type for filtering
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
