--- a/trunk/megamek/i18n/megamek/client/messages.properties
+++ b/trunk/megamek/i18n/megamek/client/messages.properties
@@ -1099,6 +1099,7 @@ MechSelectorDialog.Search.TableFilters=Table filters:
 MechSelectorDialog.Search.UnitType=Unit Type:
 MechSelectorDialog.Search.TechClass=Tech Class:
 MechSelectorDialog.Search.TechLevel=Tech Level:
+MechSelectorDialog.SupportVee=Support Vehicle
 MechSelectorDialog.title=Select Mech...
 MechSelectorDialog.BV=Show BV calculation
 MechView.ActiveFighters=Active Fighters: 
