+ Bug: Attack sprites for ground to air now point at the closest hex in the flight path instead of at the Aero (this is just a visual fix)

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -37,6 +37,8 @@ v0.41.2-dev (SVN)
 + Bug: Removed Walk button for airborne Aeros
 + Bug: Observers were allowed to reinforce from RATs
 + Feature: UnitSelectorDialog not has a "Support Vehicle" type for filtering
++ Bug: Attack sprites for ground to air now point at the closest hex in the
+    flight path instead of at the Aero (this is just a visual fix)
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
