--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -39,6 +39,7 @@ v0.41.2-dev (SVN)
 + Feature: UnitSelectorDialog not has a "Support Vehicle" type for filtering
 + Bug: Attack sprites for ground to air now point at the closest hex in the
     flight path instead of at the Aero (this is just a visual fix)
++ Feature: Aeros can now be targeted by clicking on a hex in the flight path
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
