--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -42,6 +42,7 @@ v0.41.2-dev (SVN)
 + Feature: Aeros can now be targeted by clicking on a hex in the flight path
 + Feature: For ground to air, the target hex (closest one in the flight path) is
     now cursored, to indicate where the shot is targeted
++ Data: New Sprites/Couple of Unit fixes related to SVs
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
