--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -2,6 +2,9 @@ VERSION HISTORY:
 ----------------
 v0.41.3-dev
 + Data: New Sprites
++ Bug: Air-to-ground fire needs to allow the attacker to pick a path on the
+    targets flight path if multiple hexes are equidistant (this can matter for
+    angle-of-attack calculation)
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
 + Bug [#4422]: Woods, jungle, and smoke not getting counted for LoS
