+ Bug: Air-to-ground fire needs to allow the attacker to pick a path on the targets flight path if multiple hexes are equidistant (this can matter for angle-of-attack calculation)   Added a new variable to Entity to keep track of a player-selected hex.  This is a HashMap that maps attacker Ids to picked coords.   Compute.getClosestFlightPath will now consider this Coords, if it is equidistant to the closest Coords.   Also added a new packet type so the Client can update the server with the info.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -2,6 +2,9 @@ VERSION HISTORY:
 ----------------
 v0.41.3-dev
 + Data: New Sprites
++ Bug: Air-to-ground fire needs to allow the attacker to pick a path on the
+    targets flight path if multiple hexes are equidistant (this can matter for
+    angle-of-attack calculation)
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
 + Bug [#4422]: Woods, jungle, and smoke not getting counted for LoS
