--- a/trunk/megamek/i18n/megamek/client/messages.properties
+++ b/trunk/megamek/i18n/megamek/client/messages.properties
@@ -970,6 +970,7 @@ MechDisplay.InEnemyAngelECMField=In enemy Angel ECM field.
 MechDisplay.IsEMId=Affected by electromagnetic interference.
 MechDisplay.InfernoBurnRemaining=Inferno burn remaining: 
 MechDisplay.isJammed=\ is Jammed
+MechDisplay.LastTarget=Last Target: 
 MechDisplay.Location=Location
 MechDisplay.Long=Long
 MechDisplay.m_bDumpAmmo=Dump
