+ Feature [#1362]: Extras tab in UnitDisplay now shows last targeted unit

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -7,6 +7,7 @@ v0.41.3-dev
     angle-of-attack calculation)
 + Bug: in Air-to-ground attacks, the end facing of the Aero was being used,
     instead of the facing at the position in the flight path
++ Feature [#1362]: Extras tab in UnitDisplay now shows last targeted unit
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
 + Bug [#4422]: Woods, jungle, and smoke not getting counted for LoS
