--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -9,6 +9,7 @@ v0.41.3-dev
     instead of the facing at the position in the flight path
 + Feature [#1362]: Extras tab in UnitDisplay now shows last targeted unit
 + Bug [#4437]:  ASFs - "Next target" button selects invalid targets 
++ Bug [#4440]: ASFs - unable to strafe hexes with friendly units
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
 + Bug [#4422]: Woods, jungle, and smoke not getting counted for LoS
