--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -12,6 +12,7 @@ v0.41.3-dev
 + Bug [#4440]: ASFs - unable to strafe hexes with friendly units
 + Patch [#465]: Advanced option to turn off displaying hex coordinates
 + Bug [#3877]: Compiling with JDK 7 breaks Mac releases
++ Patch [#467]: Antialiasing only works during deployment
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
 + Bug [#4422]: Woods, jungle, and smoke not getting counted for LoS
