--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -13,6 +13,7 @@ v0.41.3-dev
 + Patch [#465]: Advanced option to turn off displaying hex coordinates
 + Bug [#3877]: Compiling with JDK 7 breaks Mac releases
 + Patch [#467]: Antialiasing only works during deployment
++ Data: New Sprites.
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
 + Bug [#4422]: Woods, jungle, and smoke not getting counted for LoS
