--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1965,6 +1965,8 @@ TacticalOverlaySettingsDialog.FovHighlightRingsRadii=Sizes of disks that are to 
 TacticalOverlaySettingsDialog.FovHighlightRingsColors=Colors of disks that are to be highlighted (in Hue Saturation Brightness format):
 TacticalOverlaySettingsDialog.FovOutsideEnabled=Darken hexes outside Field of View of selected hex
 TacticalOverlaySettingsDialog.FovDarkenAlpha=Opaqueness for outside Field of View overlay:
+TacticalOverlaySettingsDialog.FovStripes=Number of Stripes
+TacticalOverlaySettingsDialog.FovGrayscale=Draw Grayscale
 TankMapSet.FrontArmor=Front Armor
 TankMapSet.FrontIS=Front I.S.
 TankMapSet.LS=LS
