--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -18,6 +18,7 @@ v0.41.3-dev
 + Feature: Tactical Overlay settings now update board view immediately
 + Patch [#466]: FoV Shading in with stripes
 + Translation(Russian): First pass of Russian translation complete.
++ Bug: Pintle turret weight calculation wrong
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
 + Bug [#4422]: Woods, jungle, and smoke not getting counted for LoS
