--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -25,6 +25,7 @@ v0.41.3-dev
 + Bug [#4474]: NPE in 0.41.3 r11674 UnitDisplay$ExtraPanel.displayMech
 + Patch [#468]: Anti-aliasing for the StepSprites
 + Feature: Anti-aliasing for CursorSprites
++ Patch [#469]: StepSprite text gets lost at lower scales
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
 + Bug [#4422]: Woods, jungle, and smoke not getting counted for LoS
