--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -29,6 +29,9 @@ v0.41.3-dev
 + Patch [#470]: Updated movement and facing arrows (StepSprite/EntitySprite)
 + Data: New Sprites and Neoancient RATs
 + Bug: M-Pod should be defensive BV for tanks
++ Bug: AR10 ammo BV should be in total compared to launcher BV, not for each
+    type of missile seperately
++ Bug: PPC w/ capacitor has wrong BV when combined with drone operating system
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
 + Bug [#4422]: Woods, jungle, and smoke not getting counted for LoS
