+ Bug [#4476]: Unjam UAC Unofficial Option Not Working

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -35,6 +35,7 @@ v0.41.3-dev
 + Bug [#4467]: Incorrect popup text when mousing over hexes targetted by artillery
 + Bug [#4468]: Path planner doesn't know about elevation change steps
 + Bug [#4471]: TargetingDisplay centers display on off-board units
++ Bug [#4476]: Unjam UAC Unofficial Option Not Working
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
 + Bug [#4422]: Woods, jungle, and smoke not getting counted for LoS
