+ Bug: capacitor being added twice for tank ppc BV

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -38,6 +38,7 @@ v0.41.3-dev
 + Bug [#4476]: Unjam UAC Unofficial Option Not Working
 + Bug: Potential NPE in Compute.getClosestFlightPath
 + Bug: wrong BV for medium SCC
++ Bug: capacitor being added twice for tank ppc BV
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
 + Bug [#4422]: Woods, jungle, and smoke not getting counted for LoS
