--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -32,13 +32,14 @@ v0.41.3-dev
 + Bug: AR10 ammo BV should be in total compared to launcher BV, not for each
     type of missile seperately
 + Bug: PPC w/ capacitor has wrong BV when combined with drone operating system
-+ Bug [#4467]: Incorrect popup text when mousing over hexes targetted by artillery
++ Bug [#4467]: Incorrect popup text when mousing over hex targeted by artillery
 + Bug [#4468]: Path planner doesn't know about elevation change steps
 + Bug [#4471]: TargetingDisplay centers display on off-board units
 + Bug [#4476]: Unjam UAC Unofficial Option Not Working
 + Bug: Potential NPE in Compute.getClosestFlightPath
 + Bug: wrong BV for medium SCC
 + Bug: capacitor being added twice for tank ppc BV
++ Bug [#4480]: Vehicle damage threshold rule prevents criticals when IS is hit
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
 + Bug [#4422]: Woods, jungle, and smoke not getting counted for LoS
