--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -43,6 +43,8 @@ v0.41.3-dev
 + Bug [#4495]: ASFs : Cluster hit weapons still causing multiple critical hits
     per weapon on a to hit roll of 12 (was listed as fixed)
 + Bug [#4483]: ASFs : Extra heat from engine hits not shown during firing phase
++ All non-mechanized Infantry can now make anti-mech attacks, previously they
+    had to have anti-mech training, which is a restriction no longer in TW
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
 + Bug [#4422]: Woods, jungle, and smoke not getting counted for LoS
