--- a/trunk/megamek/i18n/megamek/client/messages.properties
+++ b/trunk/megamek/i18n/megamek/client/messages.properties
@@ -1507,6 +1507,7 @@ PhysicalDisplay.whichArm=Which arm(s) do you want to use to
 PilotMapSet.advantagesL=Advantages
 PilotMapSet.nameL=Name: 
 PilotMapSet.pilotL=Piloting: 
+PilotMapSet.pilotLAntiMech=Antimech: 
 PilotMapSet.gunneryL=Gunnery: 
 PilotMapSet.gunneryLL=Gunnery (L): 
 PilotMapSet.gunneryML=Gunnery (M): 
