--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -47,6 +47,8 @@ v0.41.3-dev
     had to have anti-mech training, which is a restriction no longer in TW
 + Feature: UnitDisplay Pilot tab now says Anti-Mech instead of Piloting for
     infantry
++ Bug: Updated UnitDisplay Weapon tab to-hit details for swarm and leg attacks:
+    it now follows the same format as regular weapons attacks
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
 + Bug [#4422]: Woods, jungle, and smoke not getting counted for LoS
