--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -51,6 +51,7 @@ v0.41.3-dev
     it now follows the same format as regular weapons attacks
 + Bug [#4494]: "Navel C3"
 + Data: New Sprites and unit Fix.
++ Bug [#4454]: Conventional infantry costs are being calculated incorrectly
 
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
