--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -563,7 +563,7 @@ CommonSettingsDialog.skinFileFail.msg=Error parsing skin specification file, rev
 CommonSettingsDialog.soundMute=Mute sound.
 CommonSettingsDialog.stampFilenames=Add a date/time stamp to all logs and savegames.
 CommonSettingsDialog.stampFormat=SimpleDateFormat to use for above stamp:
-CommonSettingsDialog.tileset=Tileset
+CommonSettingsDialog.tileset=Tileset:
 CommonSettingsDialog.locale=Language/Sprache/\u042f\u0437\u044b\u043a:
 CommonSettingsDialog.locale.English=English
 CommonSettingsDialog.locale.Deutsch=Deutsch
