+ Reduced default path planner time limit from 2000ms to 500ms

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -53,6 +53,7 @@ v0.41.3-dev
 + Data: New Sprites and unit Fix.
 + Bug [#4454]: Conventional infantry costs are being calculated incorrectly
 + Patch [#474]: Cosmetic Changes to CommonSettingsDialog
++ Reduced default path planner time limit from 2000ms to 500ms
 
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
