--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -54,6 +54,7 @@ v0.41.3-dev
 + Bug [#4454]: Conventional infantry costs are being calculated incorrectly
 + Patch [#474]: Cosmetic Changes to CommonSettingsDialog
 + Reduced default path planner time limit from 2000ms to 500ms
++ Bug [#4425]: Princess and Precognition share a Game reference
 
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
