+ Bug [#4453]: ASF unable to use split S for unknown reason

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -80,8 +80,8 @@ v0.41.3-dev
 + Bug: Generated Map Settigns Save Dialog now adds .xml extension if not present
 + Bug: Generated Map Settings Dialog now sets Map Size drop down to 'Custom' if
     configured map size doesn't exist
-+ Bug [#4501] ASF : rolling twice to unjam UAC 20
-
++ Bug [#4501]: ASF : rolling twice to unjam UAC 20
++ Bug [#4453]: ASF unable to use split S for unknown reason
 
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
