+ Bug: Possible to see moving unsee enemies units with double-blind, sensors and Show Movement option

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -83,6 +83,8 @@ v0.41.3-dev
 + Bug [#4501]: ASF : rolling twice to unjam UAC 20
 + Bug [#4453]: ASF unable to use split S for unknown reason
 + Bug [#4519]: Cannot Jump Over Water (Path finding)
++ Bug: Possible to see moving unsee enemies units with double-blind, sensors and
+    Show Movement option
 
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
