+ Feature: Added ability to select default weapon sort order in client settings

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -535,6 +535,8 @@ CommonSettingsDialog.autoEndFiring=Skip 'Done' when firing all weapons.
 CommonSettingsDialog.clickEdgeScroll=By right-clicking near the edge of the map.
 CommonSettingsDialog.ctlScroll=By holding down CTRL and dragging.
 CommonSettingsDialog.defaultAutoejectDisabled=Disable automatic ejection by default for units added in the lobby.
+CommonSettingsDialog.defaultWeaponSortOrder=Default Weapon Sort Order:
+CommonSettingsDialog.defaultWeaponSortOrderTooltip=Sets the default weapon sort order, if a given chassis/model doesn't have a custom weapon sort order (which overrides the default).
 CommonSettingsDialog.useAverageSkills=Use the current random skill settings when adding units in the lobby.
 CommonSettingsDialog.generateNames=Generate a random name for the pilots of new units.
 CommonSettingsDialog.getFocus=Get Focus when a new phase begins.
@@ -549,7 +551,7 @@ CommonSettingsDialog.nagForMASC=Confirm all movement that uses MASC.
 CommonSettingsDialog.nagForNoAction=Confirm done when no movement/firing/physicals declared.
 CommonSettingsDialog.nagForPSR=Confirm all movement that requires a PSR.
 CommonSettingsDialog.pathFiderTimeLimit=Pathfinder time limit (milliseconds):
-CommonSettingsDialog.protoMechUnitCodes=ProtoMech unit codes.
+CommonSettingsDialog.protoMechUnitCodes=ProtoMech unit codes:
 CommonSettingsDialog.rightDragScroll=By right-clicking on the map and dragging.
 CommonSettingsDialog.scrollSesitivity=Scroll sensitivity:
 CommonSettingsDialog.showDamageLevel=Show a colored damage icon next to unit
