+ Bug [#4520]: ProtoMechs and Equipment Modes

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -92,6 +92,7 @@ v0.41.3-dev
 + Added a defaultSkinScrollBars.xml, for the default skin with scroll bars
 + Data: New Sprites and some unit fixed.
 + Bug [#4490]: CASE doesn't work correctly for the tac ops taking damage rule.
++ Bug [#4520]: ProtoMechs and Equipment Modes
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
 + Bug [#4422]: Woods, jungle, and smoke not getting counted for LoS
