+ Bug [#4475]: BA body mounted missile launchers cannot be jettisoned + Bug: UnitDisplay System Tab would double up on satus modifiers, like * and j Added missing i18n entries that should have gone into [r11749]

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -952,6 +952,7 @@ MechDisplay.Carryng=Carrying:
 MechDisplay.CurrentSensors=Current Sensors:
 MechDisplay.Damage=Damage
 MechDisplay.DamageTrooper=By Trooper
+MechDisplay.Equipment=Equipment
 MechDisplay.RHSDamaged=Extra heat from damaged radical heat sink
 MechDisplay.Dump.message=Do you want to dump {0}?\n\nAmmo dumping will start at the beginning of the next game turn.\nYou will not be able to use the ammo while it is being dumped,\nbut it can still be critically hit or explode from heat buildup.\nIt will also explode as the result of any rear torso hit that\nturn.  Additionally, you will not be able to run or jump while\nyou are dumping ammo.
 MechDisplay.Dump.title=Dump Ammo?
