+ Bug [#4478]: Chain Whip Grapple Issues + Feature: Grappled/Grappling units now have text drawn over the unit icon

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -105,6 +105,8 @@ BoardView1.ecmSource=ECM Source
 BoardView1.eccmSource=ECCM Source
 BoardView1.Evade=\ (Evade)
 BoardView1.flare=Flare, burning for {0} more turns
+BoardView1.GRAPPLED=GRAPPLED
+BoardView1.GRAPPLER=GRAPPLER
 BoardView1.Roll=Roll
 BoardView1.Heat=\ Heat 
 BoardView1.HeavySmoke={0} heavy smoke hex(es) in line of sight.\n
