--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -5,6 +5,8 @@ v0.41.4-dev (SVN)
 + Bug [#4475]: BA body mounted missile launchers cannot be jettisoned
 + Patch [#477]: Bug fix for ECM drawing
 + Bug [#4521] Mechanized Infantry weight calculation wrong
++ Bug [#4478]: Chain Whip Grapple Issues
++ Feature: Grappled/Grappling units now have text drawn over the unit icon
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
