+ Patch [#473]: Hex Base Textures bigger than 84x72

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -17,6 +17,7 @@ v0.41.4-dev (SVN)
 + Bug [4523] BV Calculation Error for AP Gauss Ammo on ProtoMechs
 + Patch [#466]: Fov Grayscale option (grays out hexes without LoS)
 + Patch [#472]: Hex Slopes as addittion to shadows
++ Patch [#473]: Hex Base Textures bigger than 84x72
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
