+ Feature [#1253]: TacOps Using Non-Infantry Units as Cover

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -24,6 +24,7 @@ v0.41.4-dev (SVN)
 + Bug: Reinforce from MUL fails with an exception if reinforcing small craft
 + Bug: Jump infantry dismounting from airborne VTOL don't get +1 mod for jumping
 + Feature [#1381]: Zip lines for dismounting infantry
++ Feature [#1253]: TacOps Using Non-Infantry Units as Cover
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
