--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -131,8 +131,10 @@ GameOptionsInfo.option.tacops_ghost_target.displayableName=TacOps Ghost Targets
 GameOptionsInfo.option.tacops_ghost_target.description=If checked,\nUnits with ECM will be able to switch to Ghost Targets mode.
 GameOptionsInfo.option.ghost_target_max.displayableName=Ghost Targets Maximum Penalty
 GameOptionsInfo.option.ghost_target_max.description=The maximum ghost target penalty (+5 is the effective official maximum).
-GameOptionsInfo.option.tacops_dig_in.displayableName=TacOps Dig In (infantry)
+GameOptionsInfo.option.tacops_dig_in.displayableName=TacOps Dig In (Infantry)
 GameOptionsInfo.option.tacops_dig_in.description=If checked,\nInfantry can spend a turn digging in to get a defensive bonus and avoid double damage in clear hexes,\nbut with restricted firing arc.
+GameOptionsInfo.option.tacops_take_cover.displayableName=TacOps Using Non-Infantry Units as Cover (Infantry) 
+GameOptionsInfo.option.tacops_take_cover.description=If checked,\nInfantry can take cover behind units in the same hex as the infantry that have already moved.\nUses the Infantry units facing to determine the direction taking cover in.\n(TacOps pg 108)
 GameOptionsInfo.option.tacops_angel_ecm.displayableName=TacOps Angel ECM
 GameOptionsInfo.option.tacops_angel_ecm.description=If checked,\nAngel ECM will work as described in TacOps
 GameOptionsInfo.option.tacops_battle_wreck.displayableName=TacOps Battlefield Wreckage
